<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#c2c2c2"
    android:orientation="horizontal">

    <Button
        android:id="@+id/id_text"
        android:text="@string/something"
        android:padding="16dp"
        android:textSize="15sp"
        android:textColor="#4d0584"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/MyButton"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    <!--
            android:layout_margin="@dimen/text_margin"
    -->
    <!-- android:textAppearance="?attr/textAppearanceListItem"
 />-->
</LinearLayout>